-Rework sound handling, better support for multiple sound files per card.
 Unfortunately, due to a Qt bug, this only works on Linux so far.
-Bug fix for upgrading from Mnemosyne 1.x on Windows with non-latin characters
 in login name.
-Updated German translation by Stephan Maseizik.
-Make makefiles more robust (contributed by Sam. S).
-When resizing the review window, update split between question and answer as
 needed.
-Tweak map card type to reduce flicker.
-In the 'Add cards' dialog, previously entered data was sometimes discarded
 when switching card types.
-Bring back 'Copy' in right click menu of question and answer (reported by
 Murray James Morrison).
-When there is not enough space to show both the question and the answer,
 make sure the answer gets all the space it can get, as opposed to a
 proportional split between question and answer (requested by Murray
 James Morrison, Gnome).
-Add tooltips for grades in 'Add cards' (reported by Gnome).
-Statistics now consistenly deal with full database (reported by Dan Schmidt).


MNEMOSYNE 2.0

More than three years in the making, this is essentially a complete rewrite of
the old 1.x codebase, with a new, clean design, consisting of components that
can be swapped in and out very easily, which allows plugin writers maximum
flexibility.

Major user-visible changes:

-Support for what is called card types. The main user visible changes are that
 editing a vice versa card or three sided card will automatically update the
 related card. There is also support for N-sided cards.
-Whereas in Mnemosyne 1.x, a card could belong to only one category, now a
 card can have multiple tags. Tags can also be organised in a hierachy, with
 '::' separating the levels of the hierachy.
-Powerful new card browser, giving much more information and flexibility to
 organise your cards.
-'Activate cards' is completely revamped and is much more flexible. Also, sets
 of active cards can be now be saved for easier access later.