@@ -16,6 +16,6 @@ class PyQtRenderChain(RenderChain):
 
     id = "default"
 
-    filters = [EscapeToHtml, Latex, ExpandPaths, Html5Audio,
+    filters = [Latex, EscapeToHtml, ExpandPaths, Html5Audio,
                Html5Video, NonLatinFontSizeIncrease]
     renderers = [HtmlCss]
