@@ -1,3 +1,4 @@
+-Don't substitute < with &lt; inside latex commands (reported by Estevo).
 -Rework sound handling, better support for multiple sound files per card.
  Unfortunately, due to a Qt bug, this only works on Linux so far.
 -Bug fix for upgrading from Mnemosyne 1.x on Windows with non-latin characters
